Fix main Aspine header being too bold on Firefox
Firefox applies `font-weight: bold;` to the main "Aspine" header because it is a h4 element, but because the font family (Poppins-Bold) is already bold, this causes Firefox to render the heading as being very bold.

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -19,6 +19,7 @@ h4#title {
 	position: absolute;
 	font-family: Poppins-Bold, Arial, Helvetica, sans-serif;
 	font-size: 80px;
+	font-weight: normal;
 	color: #00551D;
 	left: 0px;
 	right: 0px;
